fixed wrap on mobile version contact page

--- a/my-portfolio/src/App.css
+++ b/my-portfolio/src/App.css
@@ -904,6 +904,7 @@ footer {
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: center;
   }
 
   .projects-page {
@@ -919,6 +920,7 @@ footer {
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    flex-wrap: nowrap;
     row-gap: 4em;
     /* column-gap: 5vh; */
     background: none;
@@ -928,7 +930,7 @@ footer {
     box-shadow: none;
     margin-top: 10vh;
     background-color: rgba(10, 7, 40, 0.441);
-    min-height: 335vh;
+    height: 345vh;
     width: 45vh;
     border-radius: 12% / 1.5%;
     border: 2px solid rgb(14, 22, 69);
@@ -941,13 +943,13 @@ footer {
     border-bottom-left-radius: 13%;
     border-top-right-radius: 13%;
     padding: 1em 0.5em 2em 0.5em;
-    width: 38vh;
+    max-width: 38vh;
     box-shadow: 0 20px 30px -8px rgba(0, 0, 0, 0.7);
   }
   
   .project-img {
     height: auto;
-    width: 20em;
+    max-width: 20em;
     border-top-right-radius: 11.5%;
   }
   
